@@ -8,6 +8,8 @@
 * Add DifxStringArray, which will be used for storing scan names and source names in DifxRule blocks
 * Clean up, a little bit, the low level writing routines
 * Considerable fixes to zoom band support
+* Add Remap[] arrays inside DifxJob to account for pre-merged array indices
+* Add some accessor functions to return a list of datastreams associated with an antenna.  This will be used to allow multiple datastreams per antenna.
 
 3.0
 * Includes the following changes merged (hopefully correctly) from the DiFX-1.5 branch;
